[project]
name = "substack-scraper"
version = "0.1.0"
description = "A Python scraper for Substack posts with API and CLI interfaces"
requires-python = ">=3.11"
dependencies = [
    # Web scraping
    "playwright>=1.40.0",

    # API framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # CLI
    "typer[all]>=0.9.0",
    "rich>=13.7.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
substack-scraper = "substack_scraper.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/substack_scraper"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
